# Discord.hs

./: CHANGELOG.md  discord-hs.cabal  stack.yaml
discord-gateway/: discord-gateway.cabal
discord-gateway/src/Network/Discord/: Gateway.hs
discord-rest/: discord-rest.cabal
discord-rest/src/Network/Discord/: Rest.hs
discord-rest/src/Network/Discord/Rest/: HTTP.hs  Prelude.hs
discord-types/: discord-types.cabal
discord-types/src/Network/Discord/Types/: Channel.hs  Events.hs  Guild.hs
src/Network/: Discord.hs
src/Network/Discord/: Framework.hs
test/: Main.hs
