name:                discord-hs
version:             0.5.0
synopsis:            An API wrapper for Discord in Haskell
description:         Provides an api wrapper and framework for writing
                     bots against the Discord <https://discordapp.com/> API.
                     If for some reason hackage/stackage is failing to build
                     documentation, a backup set is hosted at <https://jano017.github.io/Discord.hs/>
homepage:            https://github.com/jano017/Discord.hs
license:             MIT
license-file:        LICENSE
author:              Joshua Koike
maintainer:          jkoike2013@gmail.com
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag disable-docs
  Description: Disable documentation generation
  Manual: True
  Default: False

library
  exposed-modules:     Network.Discord
                     , Network.Discord.Framework
  other-modules:       Paths_discord_hs
  -- other-extensions:
  build-depends:       base
                     , discord-types
                     , discord-rest
                     , discord-gateway
                     , hashable
                     , mtl
                     , url
                     , websockets
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

-- This is not a proper test suite just yet
-- test-suite tests
  -- type:                exitcode-stdio-1.0
  -- main-is:             Main.hs
  -- hs-source-dirs:      test
  -- build-depends:       base
                     -- , discord-types
                     -- , discord-rest
                     -- , discord-gateway
                     -- , discord-hs
  -- default-language:    Haskell2010

source-repository head
  type : git
  location: https://github.com/jano017/Discord.hs
